--- a/index.html
+++ b/index.html
@@ -4,69 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>节拍器</title>
-    <link rel="stylesheet" href="/src/styles/styles.css" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
   </head>
   <body>
-    <div class="container">
-      <div class="controls">
-        <div class="tempo-display">
-          <span id="tempo-value">120</span>
-          <span class="bpm-text">BPM</span>
-        </div>
-        <div class="beat-indicator">
-          <div class="beat beat-1 current"></div>
-          <div class="beat beat-2"></div>
-          <div class="beat beat-3"></div>
-          <div class="beat beat-4"></div>
-        </div>
-        <div class="tempo-control">
-          <input
-            type="range"
-            id="tempo-slider"
-            min="30"
-            max="240"
-            value="120"
-          />
-          <div class="tempo-presets">
-            <button class="preset-btn" data-tempo="60">60</button>
-            <button class="preset-btn" data-tempo="90">90</button>
-            <button class="preset-btn" data-tempo="120">120</button>
-            <button class="preset-btn" data-tempo="160">160</button>
-          </div>
-        </div>
-        <button id="start-stop">开始</button>
-        <div class="record-controls">
-          <button id="record-btn" class="record-btn">
-            <span class="record-icon"></span>
-            录音
-          </button>
-          <div id="record-time" class="record-time">00:00</div>
-        </div>
-      </div>
-
-      <!-- 录音列表弹层 -->
-      <div id="recordings-modal" class="modal">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2>录音列表</h2>
-            <button class="close-btn">&times;</button>
-          </div>
-          <div class="recordings-list">
-            <!-- 录音列表将通过 JavaScript 动态添加 -->
-          </div>
-        </div>
-      </div>
-
-      <!-- 添加录音列表按钮 -->
-      <button id="show-recordings" class="show-recordings-btn">
-        <span class="list-icon"></span>
-        录音列表
-      </button>
-    </div>
-    <script type="module" src="/src/js/db.js"></script>
-    <script type="module" src="/src/js/app.js"></script>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
